Upgraded /usr/bin/shock-os-imager to the version in Shock OS 8.0 Holly. Many improvements and fixes have come with this new version. Added Shock OS 8.0 Holly download links to the database. 	deleted:    find-cached-images 	modified:   images 	modified:   sha256sums 	modified:   sha256sums.sig 	deleted:    shock-os-imager-1.0-all/usr/bin/shock-os-imager 	renamed:    shock-os-imager-1.0-all/DEBIAN/control -> shock-os-imager-1.1-all/DEBIAN/control 	new file:   shock-os-imager-1.1-all/DEBIAN/preinst 	new file:   shock-os-imager-1.1-all/usr/bin/shock-os-imager 	renamed:    shock-os-imager-1.0-all/usr/share/applications/shock-os-imager.desktop -> shock-os-imager-1.1-all/usr/share/applications/shock-os-imager.desktop 	renamed:    shock-os-imager-1.0-all/usr/share/shock-os-imager/icon.svg -> shock-os-imager-1.1-all/usr/share/shock-os-imager/icon.svg

--- a/shock-os-imager-1.1-all/DEBIAN/control
+++ b/shock-os-imager-1.1-all/DEBIAN/control
@@ -1,8 +1,9 @@
-Package: Shock-OS-Imager
-Version: 1.0
+Package: shock-os-imager
+Version: 1.1
 Architecture: all
 Essential: no
 Priority: optional
 Depends: yad,wget,xz-utils,zenity
+Conflicts: shock-os-metapackage
 Maintainer: Carson Grover
 Description: Install Shock OS onto an external SD card or USB drive.
