--- a/shock-os-imager-1.1-all/usr/share/applications/shock-os-imager.desktop
+++ b/shock-os-imager-1.1-all/usr/share/applications/shock-os-imager.desktop
@@ -3,11 +3,10 @@ Version=1
 Name=Shock OS Imager
 GenericName=Shock OS Imager
 Comment=Install Shock OS onto an external SD card or USB drive.
-Exec=shock-os-imager
-TryExec=shock-os-imager
+Exec=bash -c "pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY shock-os-imager"
 Icon=/usr/share/shock-os-imager/icon.svg
 Terminal=false
 Type=Application
 Categories=Utility;
-Keywords=wallpaper;desktop;background;
+Keywords=shock;os;imager;bootable;sd;card;usb;flash;drive;pendrive;iso;img;file;imager;
 Name[en_US]=Shock OS Imager
